--- a/courjs/test.html
+++ b/courjs/test.html
@@ -1,8 +1,17 @@
 <!DOCTYPE HTML>
 <html>
+	<head>
+		<style>
+			@import url('https://fonts.googleapis.com/css?family=Quicksand');
+
+			body{
+				font-family: 'Quicksand';
+				margin: 0;
+			}
+		</style>
+	</head>
 	<body>
 		<canvas id="canvas" width="150" height="150"></canvas>
-		<canvas id="process" width="150" height="150"></canvas>
-		<script src = "javafcnt2.js"> </script>
+		<script src = "javafcnt5.js"> </script>
 	</body>
 </html>
