on continue le jeu

--- a/courjs/test.html
+++ b/courjs/test.html
@@ -1,9 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<style>
+	<style>
 			@import url('https://fonts.googleapis.com/css?family=Quicksand');
-
 			body{
 				font-family: 'Quicksand';
 				margin: 0;
@@ -11,7 +10,10 @@
 		</style>
 	</head>
 	<body>
-		<canvas id="canvas" width="150" height="150"></canvas>
+		<canvas id="canvas"></canvas>
 		<script src = "javafcnt5.js"> </script>
 	</body>
 </html>
+
+
+<!--		<iframe src="./dofus-music-combat-en-amakna.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe> -->
